# binance

./: .env  Cargo.toml  fin.db  init.sql
config/: services.toml
scripts/: generate_entities.sh
src/: error.rs  main.rs  secret_key.rs  utils.rs
src/binance/: account.rs  mod.rs  order.rs  record_api.rs
src/handlers/: auth_handler.rs  mod.rs  record_handler.rs  trade_hander.rs
src/models/: auth_model.rs  mod.rs  record_model.rs  trade_model.rs
src/mw/: auth_mw.rs  cors.rs  mod.rs
src/orm/: mod.rs  prelude.rs  trades.rs  users.rs
src/routes/: auth_route.rs  mod.rs  record_route.rs  trade_route.rs
src/trade/: mod.rs
src/websocket_lib/: connection.rs
