[package]
name = "binance"
version = "0.1.0"
edition = "2021"

[dependencies]                                                  
serde = { version = "1.0.215", features = ["derive"] }
serde_with = "3.4.0"
serde_json = "1.0.133"
axum = { version = "0.7.9", features = ["macros"] }
url = "2.5.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "socks", ] }
tokio = { version = "1.41.1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"   
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.24.0", features = ["url", "rustls-tls-native-roots"] }
rand = "0.8"
thiserror = "2"
dotenvy = "0.15"
dotenvy_macro = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
validator = { version = "0.19", features = ["derive"] }
sea-orm = { version = "1.1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros"
] }

lazy_static = { version = "1.5" }


